<resources>
    <string name="app_name">Assignment2</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="firstInputHint">Enter number 1</string>
    <string name="secondInputHint">Enter number 2</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="division">Divide</string>
</resources>